@@ -1,6 +1,8 @@
 
 Version 1.10  2008-09-18
   * trim function op in shared_func.c
+  * add Makefile template Makefile.in, delete Makefile and Makefile.freebsd
+    change make.sh to support all unix systems (passed in Linux and FreeBSD)
 
 Version 1.9  2008-09-14
   * security enhancement: support allow hosts which can connect to the server
